--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Shipnav</title>
   </head>
   <body>
+    <h1>pokedex</h1>
+    <ul class='pokemon-list'></ul>
     <script src="js/scripts.js"></script>
   </body>
 </html>
