Full-Stack Immersion Exercise 1.7
If applied, this commit will have applied all subtasks requested in Full-Stack Immersion
Exercise 1.6

--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
     <title>Shipnav</title>
   </head>
   <body>
+    <!-- Page header -->
     <h1>pokedex</h1>
+
+    <!-- Pokemon list -->
     <ul class='pokemon-list'></ul>
+
+    <!-- JavaScript -->
+    <script src="js/promise-polyfill.js"></script>
+    <script src="js/fetch-polyfill.js"></script>
     <script src="js/scripts.js"></script>
   </body>
 </html>
